{
    "name": "Base_PlayerControl",
    "maps": [
        {
            "name": "MainCharacter",
            "id": "3eaf92f6-011a-4aa4-8edd-edc32d8788da",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5ca02805-3aa0-43eb-9ade-23a1af240b86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookAround",
                    "type": "Value",
                    "id": "5ac02ec1-2a47-4067-ba6e-192c85286d10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "41c11246-1b46-49f6-a3f9-d26f6717af95",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0c34584e-1503-4813-8b7a-360adc7c1c6c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "56688f28-84d0-464b-973c-06eb5486cf22",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f5165abc-875f-4e79-b260-209e83e6b8d4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a79dcb63-0ca9-495b-802e-084f4759ca63",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c9dbb3a5-b9cb-4709-a30e-a10ac7830a0c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=5,y=5)",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}